# arbitrage-machine

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  logging_setup.py  main.py  market_sessions.py  maturity.py  models.py  monotonicity_observation.py  preflight.py  replay_execution.py  reporting.py  reporting_belief.py  reporting_event_driven.py  reporting_execution.py  reporting_kalshi.py  sleeves.py  strategy_doctrine.py
deploy/: arbitrage-machine.plist  arbitrage-machine.service
docs/: MASTER_STRATEGY_SYNTHESIS.md  belief_engine_implementation.md  belief_engine_plan.md  paper_trading_runbook.md  repo_truth_audit.md
tests/: test_allocation_engine.py  test_allocation_runtime_feedback.py  test_belief_layer.py  test_config_runtime_env.py  test_convexity_engine.py  test_convexity_execution_adapter.py  test_convexity_expected_move.py  test_convexity_lifecycle.py  test_convexity_persistence.py  test_convexity_reporting.py  test_convexity_risk.py  test_convexity_runtime_inputs.py  test_convexity_scoring.py  test_convexity_structures.py  test_cross_market.py  test_cross_market_snapshot.py  test_event_driven_v1.py  test_event_paper_execution_validation.py  test_event_replay.py  test_execution_replay.py  test_execution_router.py  test_external_cache.py  test_fee_and_orderbook.py  test_ibkr_trend_adapter.py  test_ladder_and_monotonicity.py  test_macro_discovery.py  test_market_filters.py  test_options_calibration.py  test_options_outcomes.py  test_options_phase1.py  test_options_reporting.py  test_options_scenarios.py  (+23 more)
(+162 files in other folders)
