[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage-machine"
version = "0.1.0"
description = "Production-oriented automated Kalshi trading system with modular strategy support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "cryptography>=42.0.8",
  "requests>=2.32.3",
  "tzdata>=2025.2",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
